@@ -1,3 +1,12 @@
+2011-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/jtag2.h: Keep track of whether starting a debugging session
+	with the ICE actually succeeded, and only ever attempt to send a
+	CMND_RESTORE_TARGET in that case.  Sending it without a debugWIRE
+	session succeeded (e.g. since the DWEN fuse wasn't active) might
+	screw up the ICE's firmware.
+	* src/jtag2io.cc: (Dito.)
+
 2011-12-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	(Merging branch /branches/jwunsch_except/avarice)
